@@ -46,6 +46,9 @@ Server Fixes
   decay (1-second auto-decay) when processing SELF action to use object on
   clothing.
 
+--Max flight distance 10,000 tiles.  No more flights to tutorial or d-town.
+
+
 
 
 
